@@ -8,15 +8,12 @@ import com.gftworkshopcatalog.repositories.ProductRepository;
 import com.gftworkshopcatalog.repositories.PromotionRepository;
 import com.gftworkshopcatalog.services.PromotionService;
 import jakarta.annotation.PostConstruct;
-import jakarta.persistence.EntityNotFoundException;
 import lombok.extern.slf4j.Slf4j;
-import org.hibernate.exception.DataException;
 import org.springframework.dao.DataAccessException;
 import org.springframework.stereotype.Service;
-
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Slf4j
 @Service
@@ -35,37 +32,32 @@ public class PromotionServiceImpl implements PromotionService {
     }
 
     public List<PromotionEntity> findAllPromotions() {
-        try {
+        try{
             return promotionRepository.findAll();
-        } catch (DataAccessException ex) {
+        }catch (DataAccessException ex){
             log.error("Error accessing data from database", ex);
             throw new RuntimeException("Error accessing data from database", ex);
         }
     }
 
     public PromotionEntity findPromotiontById(long promotionId) {
-        return promotionRepository.findById(promotionId).orElseThrow(() -> {
-            log.error("Promotion not found with ID: {}", promotionId);
-            return new NotFoundPromotion("Promotion not found with ID: " + promotionId);
-        });
+        return promotionRepository.findById(promotionId)
+                .orElseThrow(() -> new NotFoundPromotion("Promotion not found with ID: " + promotionId));
     }
 
     public PromotionEntity addPromotion(PromotionEntity promotionEntity) {
         if (promotionEntity == null) {
             throw new IllegalArgumentException("Promotion details must not be null");
         }
-
-        try {
-            return promotionRepository.save(promotionEntity);
-        } catch (DataAccessException ex) {
-            throw new RuntimeException("Failed to add the promotion due to database error", ex);
-        }
+        return promotionRepository.save(promotionEntity);
     }
+
     public PromotionEntity updatePromotion(long promotionId, PromotionEntity promotionEntityDetails) {
         PromotionEntity existingPromotion = findPromotiontById(promotionId);
         updatePromotionEntity(existingPromotion, promotionEntityDetails);
         return promotionRepository.save(existingPromotion);
     }
+
     private void updatePromotionEntity(PromotionEntity existingPromotion, PromotionEntity newDetails) {
         existingPromotion.setCategoryId(newDetails.getCategoryId());
         existingPromotion.setDiscount(newDetails.getDiscount());
@@ -76,25 +68,19 @@ public class PromotionServiceImpl implements PromotionService {
     }
 
     public void deletePromotion(long promotionId) {
-        PromotionEntity promotion = promotionRepository.findById(promotionId)
-                .orElseThrow(() -> new NotFoundPromotion("Promotion not found with ID: " + promotionId));
+        PromotionEntity promotion = findPromotiontById(promotionId);
         promotionRepository.delete(promotion);
     }
 
     public List<PromotionEntity> getActivePromotions() {
-        try {
-            List<PromotionEntity> promotions = promotionRepository.findAll();
-            promotions.forEach(this::updateIsActiveStatus);
-            applyActivePromotions(promotions.stream()
-                    .filter(promotion -> promotion.getIsActive() && promotion.getPromotionType().equals("SEASONAL"))
-                    .collect(Collectors.toList()));
-            return promotions.stream()
-                    .filter(PromotionEntity::getIsActive)
-                    .collect(Collectors.toList());
-        } catch (DataAccessException ex) {
-            log.error("Error accessing data from database", ex);
-            throw new RuntimeException("Error accessing data from database", ex);
-        }
+        List<PromotionEntity> promotions = promotionRepository.findAll();
+        promotions.forEach(this::updateIsActiveStatus);
+        applyActivePromotions(promotions.stream()
+                .filter(promotion -> promotion.getIsActive() && promotion.getPromotionType().equals("SEASONAL"))
+                .toList());
+        return promotions.stream()
+                .filter(PromotionEntity::getIsActive)
+                .toList();
     }
 
     private void updateIsActiveStatus(PromotionEntity promotion) {
@@ -115,3 +101,4 @@ public class PromotionServiceImpl implements PromotionService {
         });
     }
 }
+
